Implemented an authentication system
