# routes/index.js
@@ -1,12 +1,20 @@
-const express = require('express')
+const express = require('express');
+const passport = require('passport');
 const router = express.Router();
-
-router.get('/', (req, res, next) => {
-    res.send('Hello World!')
-});
 
 router.use('/', require('./books'));
 
 router.use('/', require('./users'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err){
+        if(err) {
+            return next(err);
+        }
+        res.redirect('/');
+    });
+});
 
 module.exports = router;
